--- a/traffic-signs/Traffic_Signs_Recognition.ipynb
+++ b/traffic-signs/Traffic_Signs_Recognition.ipynb
@@ -344,12 +344,12 @@
     "n_channels = 1\n",
     "\n",
     "# Conv Layer 1\n",
-    "layer_1_filter_size = 5\n",
-    "layer_1_num_filter = 16\n",
+    "layer_1_filter_size = 6\n",
+    "layer_1_num_filter = 6\n",
     "\n",
     "# Conv Layer 2\n",
-    "layer_2_filter_size = 5\n",
-    "layer_2_num_filter = 36\n",
+    "layer_2_filter_size = 4\n",
+    "layer_2_num_filter = 16\n",
     "\n",
     "keep_prob = 0.5\n",
     "\n",
@@ -357,10 +357,10 @@
     "fully_conn_size = 128\n",
     "\n",
     "def get_weights(shape):\n",
-    "    return tf.Variable(tf.truncated_normal(shape))\n",
+    "    return tf.Variable(tf.truncated_normal(shape, stddev=1e-3))\n",
     "\n",
     "def get_biases(num_filter):\n",
-    "    return tf.Variable(tf.zeros(num_filter))\n",
+    "    return tf.Variable(tf.constant(0.01, [num_filter]))\n",
     "\n",
     "def get_conv_layer(inputs, weights, biases, max_pool=True):\n",
     "    strides = [1, 1, 1, 1]\n",
@@ -384,10 +384,9 @@
    },
    "outputs": [],
    "source": [
-    "def convert_conv_output_to_fc_input(layer):\n",
+    "def get_flattened_layer(layer):\n",
     "    \"\"\"\n",
-    "        Takes as input the output from a convolutional layer\n",
-    "        And flattens it to be used as input to a fully connected later\n",
+    "        Flatterns the layer\n",
     "    \"\"\"\n",
     "    layer_shape = layer.get_shape()\n",
     "    \n",
@@ -466,7 +465,7 @@
     "    # Convolutional layer\n",
     "    layer_2_conv_layer = get_conv_layer(layer_1_conv_layer, layer_2_weights, layer_2_biases, max_pool=True)\n",
     "    \n",
-    "    layer_flat,num_features = convert_conv_output_to_fc_input(layer_2_conv_layer)\n",
+    "    layer_flat,num_features = get_flattened_layer(layer_2_conv_layer)\n",
     "\n",
     "    fully_connected_layer_1_output = get_fully_connected_layer(layer_flat, weights_fully_conn_layer_1, biases_fully_conn_layer_1, train=train)\n",
     "    \n",
@@ -537,7 +536,7 @@
     "\n",
     "BATCH_SIZE = 128\n",
     "\n",
-    "\n",
+    "# Regularization paramter\n",
     "beta = 1e-4\n",
     "\n",
     "x = tf.placeholder(tf.float32, shape=[None, image_shape[0], image_shape[1], n_channels])\n",
