--- a/CarND-Advanced-Lane-Lines/Advance_Lane_Finding.ipynb
+++ b/CarND-Advanced-Lane-Lines/Advance_Lane_Finding.ipynb
@@ -202,7 +202,8 @@
    "cell_type": "code",
    "execution_count": 15,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "scrolled": true
    },
    "outputs": [
     {
@@ -219,6 +220,13 @@
    "source": [
     "plot_on_subplots([image_to_test, undistort(image_to_test, dist, mtx)], ['Original', 'Undistorted'])\n",
     "pylab.savefig(\"./output_images/input_images.png\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Compute thresholds"
    ]
   },
   {
@@ -407,6 +415,13 @@
     "plot_on_subplots([dir_thresh, combined_binary], [\"dir threshold\", \"combined\"], cmap='gray')\n",
     "imsave(\"./output_images/dir_thresh.png\", dir_thresh, cmap=\"gray\")\n",
     "imsave(\"./output_images/combined_binary.png\", combined_binary, cmap=\"gray\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Hough lines"
    ]
   },
   {
@@ -667,6 +682,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Transformation matrix and warping"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 23,
    "metadata": {
@@ -813,6 +835,13 @@
    ],
    "source": [
     "print(line_base)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Finding pixels and fitting polynomial"
    ]
   },
   {
